crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_multiple_embeddings_view_vector_search_sql_filters.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
---
[
  {
    "id": 1015,
    "answer": "Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content.",
    "_score": 0.28
  },
  {
    "id": 821,
    "answer": "Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*).",
    "_score": 0.25
  },
  {
    "id": 449,
    "answer": "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients.",
    "_score": 0.23
  },
  {
    "id": 449,
    "answer": "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients.",
    "_score": 0.23
  },
  {
    "id": 449,
    "answer": "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients.",
    "_score": 0.23
  },
  {
    "id": 1193,
    "answer": "The body profile of Menidae is very deep and resembles a flat disc, due to the strongly curved ventral contour.",
    "_score": 0.2
  }
]
